--- a/rownosc-i-identycznosc-integerow/pom.xml
+++ b/rownosc-i-identycznosc-integerow/pom.xml
@@ -2,16 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>javowiec-pl-java</artifactId>
+        <groupId>pl.javowiec</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.javowiec</groupId>
-    <artifactId>javowiec-pl-java</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>optional-orElse-vs-orElseGet</module>
-        <module>rownosc-i-identycznosc-integerow</module>
-    </modules>
-    <packaging>pom</packaging>
+    <artifactId>rownosc-i-identycznosc-integerow</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
