Add skanuj-projekt-z-sonarqube module

--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,12 @@
     <modules>
         <module>optional-orElse-vs-orElseGet</module>
         <module>rownosc-i-identycznosc-integerow</module>
+        <module>skanuj-projekt-z-sonarqube</module>
     </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
 </project>
